# test-project

./: CHANGELOG.md  Dockerfile  README.md  new_file.txt  pyproject.toml  semver.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
