[project]
version = "0.1.1"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""
upload_to_pypi = false  # Set to true if you want to publish to PyPI
commit_message = "chore(release): {version}"
commit_author = "semantic-release-bot <semantic-release-bot@github.com>"